--- a/apps/search/templates/search/index.html
+++ b/apps/search/templates/search/index.html
@@ -7,7 +7,7 @@
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- Compiled and minified CSS -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
@@ -74,7 +74,7 @@
                 <div class="container center">
                     <p>
                         &copy 2017 Copyright 
-                        <a class="grey-text text-lighten-4" href="https://github.com/ytgeng99" target="_blank"> Yongtao Geng </a> | Built using Django, JavaScript, jQuery, Ajax, Materialize CSS, Yelp Fusion API and Google Map API.
+                        <a class="grey-text text-lighten-4" href="https://github.com/ytgeng99" target="_blank"> Yongtao Geng </a> | Django, JavaScript, jQuery, Ajax, Materialize CSS, Yelp Fusion API and Google Map API.
                     </p>
                 </div>
         </footer>
