--- a/apps/search/templates/search/results.html
+++ b/apps/search/templates/search/results.html
@@ -176,7 +176,7 @@
                 <div class="container center">
                     <p>
                         &copy 2017 Copyright 
-                        <a class="grey-text text-lighten-4" href="https://github.com/ytgeng99" target="_blank"> Yongtao Geng </a> | Built using Django, JavaScript, jQuery, Ajax, Materialize CSS,Yelp Fusion API and Google Map API.
+                        <a class="grey-text text-lighten-4" href="https://github.com/ytgeng99" target="_blank"> Yongtao Geng </a> | Django, JavaScript, jQuery, Ajax, Materialize CSS,Yelp Fusion API and Google Map API.
                     </p>
                 </div>
         </footer>
